Github Pages Issue Fixed

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
   function hideURLbar(){ window.scrollTo(0,1); } </script>
 </head>
-<base href="/">
+<base href="/the-tech-store">
 <body>
   <tts-root></tts-root>
 </body>
