Original JS Removed, dropdown directive created, tweaks in Styles

--- a/src/index.html
+++ b/src/index.html
@@ -10,25 +10,12 @@
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
   <link href="./assets/css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="./assets/css/font-awesome.css" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/css/jstarbox.css" type="text/css" media="screen" charset="utf-8" />
   <link href="./assets/css/style.css" rel='stylesheet' type='text/css' />
-  <script src="./assets/js/jquery-1.11.1.min.js"></script>
-  <script type="text/javascript" src="./assets/js/bootstrap.js"></script>
-  <script type="text/javascript" src="./assets/js/easing.js"></script>
-  <script type="text/javascript" src="./assets/js/easyResponsiveTabs.js"></script>
-  <script type="text/javascript" src="./assets/js/jquery.mycart.js"></script>
-  <script type="text/javascript" src="./assets/js/jquery.vide.min.js"></script>
-  <script type="text/javascript" src="./assets/js/jquery.zoomtoo.js"></script>
-  <script type="text/javascript" src="./assets/js/jquery-1.11.1.min.js"></script>
-  <script type="text/javascript" src="./assets/js/modernizr.custom.js"></script>
-  <script type="text/javascript" src="./assets/js/move-top.js"></script>
   <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
-  <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
-  function hideURLbar(){ window.scrollTo(0,1); }</script>
 </head>
 <base href="/">
 <body>
-  <tts-root></tts-root>
+  <tts-root><div id="myLoader"></div></tts-root>
 </body>
 </html>
