--- a/src/extras/Product Simple Template.html
+++ b/src/extras/Product Simple Template.html
@@ -1,17 +1,14 @@
 <div class="col-md-3 pro-1">
   <div class="col-m">
-    <a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-              <img src="../../assets/images/of16.png" class="img-responsive" alt="">
-            </a>
+    <a href="#" data-toggle="modal" data-target="#myModal1" class="offer-img">
+      <img src="../../assets/images/of.png" class="img-responsive" alt="">
+    </a>
     <div class="mid-1">
       <div class="women">
         <h6><a href="single.html">Moisturiser</a>(500 g)</h6>
       </div>
       <div class="mid-2">
         <p><label>$7.00</label><em class="item_price">$6.00</em></p>
-        <div class="block">
-          <div class="starbox small ghosting"> </div>
-        </div>
         <div class="clearfix"></div>
       </div>
       <div class="add add-2">
